change blog h1 title from author name to Blog

--- a/author.hbs
+++ b/author.hbs
@@ -16,7 +16,7 @@
                     <span class="author-profile-image">{{> "icons/avatar"}}</span>
                 {{/if}}
                 <div class="author-header-content">
-                    <h1 class="site-title">{{name}}</h1>
+                    <h1 class="site-title">Blog</h1>
                     {{#if bio}}
                         <h2 class="author-bio">{{bio}}</h2>
                     {{/if}}
