--- a/index.hbs
+++ b/index.hbs
@@ -3,6 +3,7 @@
 into the {body} of the default.hbs template --}}
 
 <header class="site-home-header">
+    {{> site-header}}
     {{> header-background background=@site.cover_image}} {{!--Special header-image.hbs partial to generate the background image--}}
         <div class="inner">
             {{> "site-nav"}}
